fix(css): remove strting scale transition
remove scale3d as it is causing umages cut off on ios

--- a/site/static/css/lightgallery.css
+++ b/site/static/css/lightgallery.css
@@ -304,23 +304,15 @@
 }
 
 body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-object {
-  -webkit-transform: scale3d(0.5, 0.5, 0.5);
-  transform: scale3d(0.5, 0.5, 0.5);
   opacity: 0;
-  will-change: opacity, transform;
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0, 0, 0.25, 1) 0s, opacity 250ms cubic-bezier(0, 0, 0.25, 1) !important;
-  -moz-transition: -moz-transform 250ms cubic-bezier(0, 0, 0.25, 1) 0s, opacity 250ms cubic-bezier(0, 0, 0.25, 1) !important;
-  -o-transition: -o-transform 250ms cubic-bezier(0, 0, 0.25, 1) 0s, opacity 250ms cubic-bezier(0, 0, 0.25, 1) !important;
-  transition: transform 250ms cubic-bezier(0, 0, 0.25, 1) 0s, opacity 250ms cubic-bezier(0, 0, 0.25, 1) !important;
-  -webkit-transform-origin: 50% 50%;
-  -moz-transform-origin: 50% 50%;
-  -ms-transform-origin: 50% 50%;
-  transform-origin: 50% 50%;
+  will-change: opacity;
+  -webkit-transition: opacity 250ms cubic-bezier(0, 0, 0.25, 1) !important;
+  -moz-transition: opacity 250ms cubic-bezier(0, 0, 0.25, 1) !important;
+  -o-transition: opacity 250ms cubic-bezier(0, 0, 0.25, 1) !important;
+  transition: opacity 250ms cubic-bezier(0, 0, 0.25, 1) !important;
 }
 
 body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object {
-  -webkit-transform: scale3d(1, 1, 1);
-  transform: scale3d(1, 1, 1);
   opacity: 1;
 }
 
