--- a/src/sass/_lg-theme-default.scss
+++ b/src/sass/_lg-theme-default.scss
@@ -217,18 +217,14 @@ body:not(.lg-from-hash) {
     .lg-outer {
         &.lg-start-zoom {
             .lg-object {
-                @include scale3d(0.5, 0.5, 0.5);
                 opacity: 0;
-                will-change: opacity, transform;
+                will-change: opacity;
                 @include transitionCustom(
-                    transform 250ms cubic-bezier(0, 0, 0.25, 1) 0s,
                     opacity 250ms cubic-bezier(0, 0, 0.25, 1) !important
                 );
-                @include transform-origin(50% 50%);
             }
             .lg-item.lg-complete {
                 .lg-object {
-                    @include scale3d(1, 1, 1);
                     opacity: 1;
                 }
             }
